--- a/index.html
+++ b/index.html
@@ -13,9 +13,15 @@
     <aside>
       <img src="./src/img/foto.jpeg" alt="Minha foto">
       <div class="incon">
-        <i class="fa-brands fa-github"></i>
-        <i class="fa-brands fa-linkedin"></i>
-        <i class="fa-solid fa-square-envelope"></i>
+        <a href="https://www.linkedin.com/in/kerouline-ariane-da-silva-/">
+          <i class="fa-brands fa-github"></i>
+        </a>
+        <a href="https://github.com/Kerouline-Ariane-Da-Silva">
+          <i class="fa-brands fa-linkedin"></i>
+        </a>
+        <a href="https://mail.google.com/">
+          <i class="fa-solid fa-square-envelope"></i>
+        </a>
       </div>
     </aside>
     <div class="principal">
